# Photography-Portfolio

./: .gitignore  README.md  TEST-RESULTS.md  TESTING-README.md
.claude/agents/: editorial-ui.md  perf-reviewer.md  pipeline-engineer.md
.github/workflows/: generate-galleries.yml
app/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js  vercel.json  vitest.config.ts
app/public/: manifest.webmanifest  studio-sw.js
app/scripts/: generate-about-image.ts  generate-cover-thumbnails.ts  generate-gallery-data.ts  get-cover-file-ids.ts  set-admin-password.ts  tauri-build.sh
app/src-tauri/: Cargo.toml  README.md  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/permissions/: oauth.toml
app/src-tauri/src/: main.rs  oauth.rs
app/src/app/: globals.css  (+2 more)
ios/vflics-studio/: README.md
tasks/: README.md  ops-autopublish-setup.md
tasks/archive/: 05-polish-ios.md  README.md  old-drive-native-refactor-history.md  vflics-studio.command
tasks/guides/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PERFORMANCE_ANALYSIS.md  GALLERY_COVER_OPTIMIZATION.md  GALLERY_OPTIMIZATION_GUIDE.md  GALLERY_PRE_GENERATION_GUIDE.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATIONS_APPLIED.md  PERFORMANCE_TEST_RESULTS.md  TESTING_GUIDE.md
tasks/redesign/: 00-editorial-redesign-roadmap.md  01-refactor-plan.md  02-design-brief.md
tasks/remaining/: 01-tauri-oauth-test.md  02-tauri-oauth-fixes.md  03-ios-oauth.md  04-delete-vercel-upload.md  05-polish.md  06-autopublish-setup.md  README.md
(+130 files in other folders)
